// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField component renders a field in error state 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-fZTBsJ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-fZTBsJ:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-fZTBsJ[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fZTBsJ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-klXesr {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-2);
    max-width: 90vw;
    padding: var(--sizes-2);
    padding-right: var(--space-6);
    position: relative;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}

  .c-fNCeYG {
    color: var(--colors-danger);
    margin-left: var(--space-1);
    font-weight: 400;
  }

  .c-fIXJvv {
    color: var(--colors-tonal600);
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-fIXJvv > .c-fIXJvv:before,
  .c-fIXJvv > .c-fIXJvv:after {
    display: none;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-fZTBsJ-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-eAiySG-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.75;
  }

  .c-klXesr-kUaMfZ-size-md {
    max-width: 400px;
  }

  .c-fZTBsJ-bXVTjQ-state-error {
    border: 1px solid var(--colors-danger);
  }

  .c-dbrbZt-eAiySG-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.75;
  }

  .c-fIXJvv-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-fIXJvv-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-fIXJvv-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-dbrbZt-fDXBFo-cv {
    height: var(--sizes-2);
    width: var(--sizes-2);
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-PJLV-icmpvrW-css {
    position: relative;
  }

  .c-fDzwZw-iewRRYK-css {
    position: absolute;
    top: 0;
    right: 0;
  }

  .c-klXesr-icFLuKp-css {
    padding-right: var(--sizes-2);
  }

  .c-dhzjXW-idXOPtz-css {
    color: var(--colors-danger);
    align-items: flex-start;
    margin-top: var(--space-2);
  }

  .c-dbrbZt-ihYlUBO-css {
    margin-right: var(--space-2);
    flex-shrink: 0;
  }

  .c-fIXJvv-ikkBjHS-css {
    color: inherit;
    transform: translateY(var(--space-1));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="DATE FIELD"
        >
          DATE FIELD
          <span
            aria-hidden="true"
            class="c-fNCeYG"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <input
          class="c-fZTBsJ c-fZTBsJ-pHZal-size-md c-fZTBsJ-bXVTjQ-state-error"
          id="DATE FIELD"
          name="DATE FIELD"
          type="text"
          value=""
        />
        <button
          aria-controls="radix-4"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Open calendar"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iewRRYK-css"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-eAiySG-size-sm c-dbrbZt-ihFPSGE-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h18v16H3V5zm18 4H3m4-4V3m10 2V3"
            />
            <rect
              height="2"
              width="2"
              x="15"
              y="15"
            />
          </svg>
        </button>
      </div>
      <div
        class="c-dhzjXW c-dhzjXW-idXOPtz-css"
      >
        <svg
          aria-hidden="true"
          class="c-dbrbZt c-dbrbZt-cyeZeh-size-sm c-dbrbZt-ihYlUBO-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <p
          class="c-fIXJvv c-fIXJvv-bndJoy-size-sm c-fIXJvv-ikkBjHS-css"
        >
          This field is required
        </p>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`DateField component renders a field with a text input 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-fZTBsJ {
    -webkit-appearance: none;
    appearance: none;
    border: 1px solid var(--colors-tonal400);
    border-radius: var(--radii-0);
    box-shadow: none;
    box-sizing: border-box;
    color: var(--colors-tonal600);
    cursor: text;
    display: block;
    font-family: var(--fonts-body);
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    transition: all 100ms ease-out;
    width: 100%;
  }

  .c-fZTBsJ:focus {
    border-color: var(--colors-primary);
    outline: none;
  }

  .c-fZTBsJ[disabled] {
    background-color: var(--colors-tonal100);
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-fZTBsJ::placeholder {
    color: var(--colors-tonal300);
    opacity: 1;
  }

  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-klXesr {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-2);
    max-width: 90vw;
    padding: var(--sizes-2);
    padding-right: var(--space-6);
    position: relative;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr {
      animation-duration: 75ms;
      animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
      will-change: transform, opacity;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="top"] {
      animation-name: k-ftcNPK;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="right"] {
      animation-name: k-hbaHED;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="bottom"] {
      animation-name: k-daNevH;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-klXesr[data-state="open"][data-side="left"] {
      animation-name: k-fvyGIa;
    }
}
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-fZTBsJ-pHZal-size-md {
    height: var(--sizes-4);
    font-size: var(--fontSizes-md);
  }

  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-eAiySG-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.75;
  }

  .c-klXesr-kUaMfZ-size-md {
    max-width: 400px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }

  .c-dbrbZt-fDXBFo-cv {
    height: var(--sizes-2);
    width: var(--sizes-2);
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-PJLV-icmpvrW-css {
    position: relative;
  }

  .c-fDzwZw-iewRRYK-css {
    position: absolute;
    top: 0;
    right: 0;
  }

  .c-klXesr-icFLuKp-css {
    padding-right: var(--sizes-2);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="DATE FIELD"
        >
          DATE FIELD
        </label>
      </div>
      <div
        class="c-PJLV c-PJLV-icmpvrW-css"
      >
        <input
          class="c-fZTBsJ c-fZTBsJ-pHZal-size-md"
          id="DATE FIELD"
          name="DATE FIELD"
          placeholder="DATE FIELD"
          type="text"
          value=""
        />
        <button
          aria-controls="radix-0"
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Open calendar"
          class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-iewRRYK-css"
          data-state="closed"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c-dbrbZt c-dbrbZt-eAiySG-size-sm c-dbrbZt-ihFPSGE-css"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 5h18v16H3V5zm18 4H3m4-4V3m10 2V3"
            />
            <rect
              height="2"
              width="2"
              x="15"
              y="15"
            />
          </svg>
        </button>
      </div>
    </div>
  </form>
</div>
`;
